--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="col-md-12">
-<h1>FullStack BlogProject</h1>
-</div>
 
-<app-navbar></app-navbar>
+<app-navbar-public></app-navbar-public>
+
 
 
