Working on blogpost-panel-list skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
+<div class="container">
+    <app-navbar-public></app-navbar-public>
+  <div class="row">
+    <div class="col-lg-9">
+      <app-blogpost-panel-list></app-blogpost-panel-list>
+    </div>
+    <div class="col-lg-3">
+      <app-tagbar></app-tagbar>
+    </div>
+  </div>
+</div>
 
-<app-navbar-public></app-navbar-public>
 
 
 
