--- a/src/app/blogpost-panel-list/blogpost-panel-list.component.html
+++ b/src/app/blogpost-panel-list/blogpost-panel-list.component.html
@@ -1,1 +1,15 @@
-<p>blogpost-panel-list works!</p>
+<div class="panel-group">
+  <div class="panel panel-primary">
+    <div class="row">
+      <img src="{{ blogposts[0].imagelink }}" alt="Post Image" class="img-responsive">
+    </div>
+    <div class="row">
+      <h3>Post Title</h3>
+    </div>
+    <div class="row">
+      <h4>Blurb</h4>
+    </div>
+  </div>
+</div>
+
+
