--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                             <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                             <div class="col-md-6">
                                 <input type="password" id="password" class="form-cntrol" [formControlName]="'password'" name="password" required>
-                                <span *ngIf="!loginForm.get('password').valid && loginForm.get('password).touched">
+                                <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
                                     Password cannot be empty 
                                 </span>
                             </div>
@@ -31,7 +31,7 @@
                             </button>
                             <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
                         </span>
-                        <div class="login-failed" [ngStyle]="{'background-color': 'green}" *ngIf="this.registerSuccessMessage.length > 0">
+                        <div class="login-failed" [ngStyle]="{'background-color': 'green'}" *ngIf="this.registerSuccessMessage.length > 0">
                             <p class="register-success-text">{{registerSuccessMessage}}</p>
                         </div>
                     </form>
