--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-
+<app-signup></app-signup>
+<!-- <app-login></app-login> -->
 <app-navbar-public></app-navbar-public>
-<app-login-public></app-login-public>
+
 
 
