--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
 <div class="container">
     <app-navbar-public></app-navbar-public>
+  <br>
   <div class="row">
     <div class="col-lg-9">
+      <br>
+      <br>
+      <div class="panel panel-primary">
       <app-blogpost-panel-list></app-blogpost-panel-list>
     </div>
+
+    </div>
     <div class="col-lg-3">
+      <br>
+      <br>
+      <br>
       <app-tagbar></app-tagbar>
     </div>
   </div>
