--- a/src/app/tagbar/tagbar.component.html
+++ b/src/app/tagbar/tagbar.component.html
@@ -1,4 +1,11 @@
-<div class="panel panel-primary">
-  <h3>tagbar works!</h3>
+<div class="container">
+<div class = "panel panel-primary">
+  <div class = "panel-heading">
+    <h3 class = "panel-title">Tags</h3>
+  </div>
+  <div class="panel-body">
+    <h3>tagbar works!</h3>
+  </div>
+</div>
 </div>
 
