--- a/src/app/tagbar/tagbar.component.html
+++ b/src/app/tagbar/tagbar.component.html
@@ -1,11 +1,15 @@
 <div class="container">
-<div class = "panel panel-primary">
-  <div class = "panel-heading">
-    <h3 class = "panel-title">Tags</h3>
-  </div>
-  <div class="panel-body">
-    <h3>tagbar works!</h3>
-  </div>
+  <div class="card">
+    <div class="card-header">
+      Recent Tags
+    </div>
+    <div class="card-body">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Tag</li>
+        <li class="list-group-item">Tag</li>
+        <li class="list-group-item">Tag</li>
+      </ul>
+    </div>
 </div>
 </div>
 
