--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-signup></app-signup>
-<!-- <app-login></app-login> -->
 <app-navbar-public></app-navbar-public>
+<router-outlet></router-outlet>
 
 
 
