--- a/src/app/blogpost-panel-list/blogpost-panel/blogpost-panel.component.html
+++ b/src/app/blogpost-panel-list/blogpost-panel/blogpost-panel.component.html
@@ -8,7 +8,7 @@
     <p class="card-text">By: {{ blogpost.username }}</p>
     <p class="card-text">On: {{ blogpost.updateTimestamp }}</p>
     <p class="card-text">{{ blogpost.blurb }}</p>
-    <a href="#" class="btn btn-primary">Read post...</a>
+    <a href="#" class="btn btn-primary" (click)= fullPost()>Read post...</a>
   </div>
 </div>
 <br>
