--- a/src/app/tagbar/tagbar.component.html
+++ b/src/app/tagbar/tagbar.component.html
@@ -5,11 +5,10 @@
     </div>
     <div class="card-body">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Tag</li>
-        <li class="list-group-item">Tag</li>
-        <li class="list-group-item">Tag</li>
+        <li class="list-group-item" *ngFor="let tag of tagSet">{{ tag }}</li>
       </ul>
     </div>
+  </div>
 </div>
-</div>
+
 
