you can now upload images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <app-navbar-public></app-navbar-public>
   <br>
+  <br>
+  <br>
+  <app-createblogpost></app-createblogpost>
+  <!--
   <div class="row">
     <div class="col-lg-9">
       <br>
@@ -17,7 +21,7 @@
       <br>
       <app-tagbar></app-tagbar>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <div class="container">
