--- a/src/app/createblogpost/createblogpost.component.html
+++ b/src/app/createblogpost/createblogpost.component.html
@@ -5,14 +5,22 @@
 <input class ="form-control" type="text" placeholder = "Title">
 <small id="titleHelp" class="form-text text-muted">Give your post a creative title.</small>
 </div> 
+
 <div class="form-group">
-<img src="" alt="Image">
-<div class="form-group">
-    <label for="exampleFormControlFile1">Example file input</label>
-    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+<div class="preview">
+  <img src = '{{ imgLink }}' alt = "(Your image here)" class="img-thumbnail">
+</div>
+
+<form (ngSubmit)="uploadPhoto()">
+  <div class="form-group">
+    <input type="file" accept= "image/*" class="form-control-file" id="imgupload">
+    <button type="submit" class="btn btn-secondary btn-sm">Upload</button>
   </div>
+</form>
+
 <textarea class = "form-control" rows="5" placeholder = "Write your thoughts..."></textarea>
 </div>
+
 <div class="form-group">
 <input type="text" placeholder="Tags"> <button  class="btn btn-primary btn-lg float-right">Post</button>
 <small id="tagsHelp" class="form-text text-muted">Separate by commas (i.e. "cooking, baseball, funny")</small>
