can now send a title, image link, and text body to backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
   <br>
   <br>
   <app-createblogpost></app-createblogpost>
+  <br>
+  <br>
+  <br>
+  <app-login></app-login>
   <!--
   <div class="row">
     <div class="col-lg-9">
