--- a/src/app/navbar-public/navbar-public.component.html
+++ b/src/app/navbar-public/navbar-public.component.html
@@ -8,19 +8,19 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard<span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/home">Dashboard<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link" routerLink="/signup">Register</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Log in</a>
+          <a class="nav-link" routerLink="/login">Log in</a>
         </li>
       </ul>
-      
+
     </div>
   </nav>
