--- a/src/app/navbar-public/navbar-public.component.html
+++ b/src/app/navbar-public/navbar-public.component.html
@@ -1,9 +1,15 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="#">Blog</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    <form class="form-inline my-2 my-lg-0"
+        (ngSubmit)="navigateToSearchPostsByTag()">
+      <input class="form-control mr-sm-2"
+             (input)="updateTagName($event)"
+             type="search" placeholder="Search"
+             aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0"
+              type="submit"
+              (click)="navigateToSearchPostsByTag()">Search</button>
     </form>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
