--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <app-navbar-public></app-navbar-public>
+  <app-navbar-logged-in></app-navbar-logged-in>
 </div>
 
 <div class="container">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 
 
