--- a/src/app/navbar-logged-in/navbar-logged-in.component.html
+++ b/src/app/navbar-logged-in/navbar-logged-in.component.html
@@ -1,30 +1,47 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#">Blog</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+  <a class="navbar-brand" href="#">Blog</a>
+  <form class="form-inline my-2 my-lg-0"
+        (ngSubmit)="navigateToSearchPostsByTag()">
+    <input class="form-control mr-sm-2"
+           (input)="updateTagName($event)"
+           type="search" placeholder="Search"
+           aria-label="Search">
+    <button class="btn btn-outline-info my-2 my-sm-0"
+            type="submit"
+            (click)="navigateToSearchPostsByTag()">Search
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">My Posts</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Create Post</a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Log out</a>
-          </li>
-      </ul>
-      
-    </div>
-  </nav>
+  </form>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn === true">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home">Dashboard<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">My Posts</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/createpost">Create Post</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home" (click)="logOut()">Log out</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home">Dashboard<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/signup">Register</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/login">Log in</a>
+      </li>
+    </ul>
+  </div>
+</nav>
