--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,6 +2,44 @@
     margin: 100px;
 }
 
+
+button {
+    display: inline-block;
+    border: none;
+    border-radius: 0.25rem;
+    padding: .8rem 1.6rem;
+    margin: 0;
+    text-decoration: none;
+    background: #17a2b8;
+    color: #ffffff;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1.1rem;
+    font-weight: 400;
+    cursor: pointer;
+    text-align: center;
+    transition: background 250ms ease-in-out,
+                transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+    background: #117685;
+}
+
+button:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+}
+
+button:active {
+    transform: scale(0.99);
+}
+
+
+
+
 .login-failed{
     text-align: center;
     margin: auto;
@@ -27,9 +65,11 @@
     background-color:red;
 }
 
+
 .login-failed-text, .register-success-text{
     text-align: center;
-    margin-top: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     font-weight: bold;
     color: aliceblue;
 }
