--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -2,6 +2,10 @@
     margin: 100px;
 }
 
+.ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; 
+  }
+
 button {
     display: inline-block;
     border: none;
