--- a/src/app/navbar-logged-in/navbar-logged-in.component.html
+++ b/src/app/navbar-logged-in/navbar-logged-in.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">Blog</a>
+  <a class="navbar-brand" href="#">blrb</a>
   <form class="form-inline my-2 my-lg-0"
         (ngSubmit)="navigateToSearchPostsByTag()">
     <input class="form-control mr-sm-2"
