--- a/src/app/navbar-logged-in/navbar-logged-in.component.html
+++ b/src/app/navbar-logged-in/navbar-logged-in.component.html
@@ -4,11 +4,11 @@
         (ngSubmit)="navigateToSearchPostsByTag()">
     <input class="form-control mr-sm-2"
            (input)="updateTagName($event)"
-           type="search" placeholder="Search"
+           type="search" placeholder="Search by tag"
            aria-label="Search">
     <button class="btn btn-outline-info my-2 my-sm-0"
             type="submit"
-            (click)="navigateToSearchPostsByTag()">Search
+            (click)="navigateToSearchPostsByTag()">Search by tag
     </button>
   </form>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
