date and time added

--- a/src/app/blogpost-fullview/blogpost-fullview.component.html
+++ b/src/app/blogpost-fullview/blogpost-fullview.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">
-              By {{ blogpost.userName }}
+              By {{ blogpost.userName }} on {{ blogpost.creationTimestamp }}
             </h6>
             <div class="card-text">
 
