--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
                             <button type="submit" class="login">
                                 Login
                             </button>
-                            <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
+                            <!-- <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span> -->
                         </span>
                         <div class="login-failed" *ngIf='this.isError'>
                             <p class="login-failed-text"> Login Failed. Please check your credentials and try again.</p>
