--- a/src/app/my-posts/my-posts.component.html
+++ b/src/app/my-posts/my-posts.component.html
@@ -1,1 +1,10 @@
-<p>my-posts works!</p>
+<div class="panel-group">
+  <br>
+  <br>
+  <br>
+  <app-blogpost-panel
+    *ngFor="let blogpost of myPostsList.slice().reverse()" [blogpost] = blogpost>
+  </app-blogpost-panel>
+
+</div>
+
