--- a/src/app/navbar-logged-in/navbar-logged-in.component.html
+++ b/src/app/navbar-logged-in/navbar-logged-in.component.html
@@ -4,7 +4,7 @@
         (ngSubmit)="navigateToSearchPostsByTag()">
     <input class="form-control mr-sm-2"
            (input)="updateTagName($event)"
-           type="search" placeholder="Search"
+           type="search" placeholder="Search By Tag"
            aria-label="Search">
     <button class="btn btn-outline-info my-2 my-sm-0"
             type="submit"
@@ -22,7 +22,7 @@
         <a class="nav-link" routerLink="/home">Dashboard<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Posts</a>
+        <a class="nav-link" routerLink="/myPosts">My Posts</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/createpost">Create Post</a>
