--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                         <div class="form-group row">
                             <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                             <div class="col-md-6">
-                                <input type="password" id="password" class="form-cntrol" [formControlName]="'password'" name="password" required>
+                                <input type="password" id="password" class="form-control" [formControlName]="'password'" name="password" required>
                                 <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
                                     Password cannot be empty
                                 </span>
