--- a/src/app/navbar-logged-in/navbar-logged-in.component.html
+++ b/src/app/navbar-logged-in/navbar-logged-in.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="#">Blog</a>
   <form class="form-inline my-2 my-lg-0"
         (ngSubmit)="navigateToSearchPostsByTag()">
