--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,5 +1,7 @@
 .register-section {
     margin: 100px;
+    padding-top: 5.2rem;
+    padding-bottom: 0;
 }
 
 .ng-invalid:not(form)  {
@@ -14,7 +16,7 @@ button {
     margin: 0;
     text-decoration: none;
     background: #00587a;
-    color: #e7e7de;
+    color: #ffffff;
     font-family: poppins;
     font-size: 1.1rem;
     font-weight: 300;
@@ -33,6 +35,7 @@ form{
 
 h4{
     font-family: poppins;
+    color:#ffffff;
     font-size: 500;
 }
 
