--- a/src/app/tagbar/tagbar.component.html
+++ b/src/app/tagbar/tagbar.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card">
-    <div class="card-header">
+    <div class="card-header bg-dark">
       Recent Tags
     </div>
     <div class="card-body">
