--- a/src/app/createblogpost/createblogpost.component.css
+++ b/src/app/createblogpost/createblogpost.component.css
@@ -1,4 +1,13 @@
 
+.container{
+    margin-top: 10rem; 
+}
+
+#imgupload{
+    margin-top: .3rem;
+    margin-bottom: .3rem;
+}
+
 button, .btn{
     border: none;
     border-radius: 0.25rem;
