tag linking and search update sorted

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -95,3 +95,9 @@ button:active {
     font-weight: bold;
     color: aliceblue;
 }
+
+.toast-top-center {
+    top: 20rem;
+    margin: 0 auto;
+    left: 50%;
+    }
